refactor: added a lock for pfsense and changed your business to you

--- a/app/templates/solutions.html
+++ b/app/templates/solutions.html
@@ -380,7 +380,7 @@
                     <div class="integration-center">
                         <div class="center-node">
                             <i class="fas fa-shield-alt"></i>
-                            <span>Your Business</span>
+                            <span>You</span>
                         </div>
                     </div>
                     <div class="integration-nodes">
@@ -389,7 +389,7 @@
                             <span>WireGuard</span>
                         </div>
                         <div class="integration-node" style="--angle: 90deg;">
-                            <i class="fas fa-firewall"></i>
+                            <i class="fas fa-shield-alt"></i>
                             <span>pfSense</span>
                         </div>
                         <div class="integration-node" style="--angle: 180deg;">
