--- a/app/templates/services.html
+++ b/app/templates/services.html
@@ -23,7 +23,7 @@
                     <li>24/7 monitoring included</li>
                 </ul>
                 <div class="btn-container">
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="{{ url_for('main.contact') }}" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
 
@@ -44,7 +44,7 @@
                     <li>Advanced threat protection</li>
                 </ul>
                 <div class="btn-container">
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="{{ url_for('main.contact') }}" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
                     <li>Compliance reporting</li>
                 </ul>
                 <div class="btn-container">
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="{{ url_for('main.contact') }}" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                     <li>Follow-up consultation</li>
                 </ul>
                 <div class="btn-container">
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                    <a href="{{ url_for('main.contact') }}" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
         </div>
